--- a/src/assets/scss/Projects.scss
+++ b/src/assets/scss/Projects.scss
@@ -56,8 +56,9 @@
 
 .project-header h3 {
   font-size: 1.5rem;
-  font-weight: 500;
+  font-weight: 700;
   color: var(--text-color);
+  text-transform: uppercase;
 }
 
 .project-links {
